# chess

./: CMakeLists.txt  harness.pl  harness_helgrind.pl  harness_plain.pl
ChessViewer/: .project  AndroidManifest.xml  chessviewer.properties  chessviewer.xml  module_chessviewer.xml
ChessViewer/res/layout/: activity_chess.xml
ChessViewer/res/menu/: mainmenu.xml
ChessViewer/res/values/: strings.xml
ChessViewer/src/com/example/chessviewer/: ChessActivity.java
ChessViewer/src/edu/lsu/cct/chess/: Board.java  Piece.java
LogParser/: log_parser.py
algorithms/: README.txt
algorithms/src/edu/lsu/cct/minimax/: Node.java
cmake/: FindReadline.cmake
docs/: answers.txt
docs/algorithms/src/edu/lsu/cct/minimax/: Counter.java  Game.java  Out.java
headers/: FixedVec.hpp  board.hpp  chess_move.hpp  data.hpp  defs.hpp  hash.hpp  hpx_support.hpp  log_board.hpp  main.hpp  mpi_support.hpp  parallel.hpp  parallel_support.hpp  print_board.hpp  score.hpp  search.hpp  search_coordinator.hpp  smart_ptr.hpp  task_component.hpp  timer.hpp  zkey.hpp
hpx/: CMakeLists.txt  INSTALL
hpx/headers/: board.hpp  book.hpp  data.hpp  defs.hpp
hpx/src/: CMakeLists.txt  board.cpp  book.cpp  eval.cpp  main.cpp  search.cpp
inputs/: board3
microkernel/: Makefile  README  TESTING  board.c  common.h  data.h  defs.h  main.c  protos.h  serial_times.txt
minchess/: Makefile  README  TESTRUN  board.c  board_file.c  common.h  data.c  data.h  defs.h  eval.c  main.c  protos.h  search2.c
minimax/: CMakeLists.txt  FindOpenMP.cmake  FindReadline.cmake  INSTALL  README
minimax/.hg/: branchheads.cache  dirstate  undo.desc
minimax/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
minimax/.hg/store/data/: .hgignore.i  _c_make_lists.txt.i  _i_n_s_t_a_l_l.i
minimax/.hg/store/data/headers/: board.hpp.i  book.hpp.i  data.hpp.i  defs.hpp.i  eval.hpp.i  hash__table.hpp.i  main.hpp.i  node.hpp.i  search.hpp.i
minimax/.hg/store/data/liboptlist/: _c_make_lists.txt.i  optlist.cpp.i  optlist.hpp.i
minimax/.hg/store/data/src/: _c_make_lists.txt.i  board.cpp.i  book.cpp.i  book.txt.i  data.cpp.i  eval.cpp.i  hash__table.cpp.i  main.cpp.i  search.cpp.i
minimax/headers/: board.hpp  data.hpp  defs.hpp  eval.hpp  main.hpp  node.hpp  search.hpp
minimax/liboptlist/: optlist.cpp
minimax/src/: CMakeLists.txt  board.cpp  data.cpp  eval.cpp  main.cpp  search.cpp
mpi/: Makefile  README  board.c  book.c  common.h  data.c  data.h  defs.h  eval.c  file.c  main.c  mpi.c  mpihelper.c  mpimanager.c  network.c  protos.h  search2.c
openmp/: CHANGELIST  CMakeLists.txt  README  TODO.txt  answers.txt  chess.pxi  harness.pl  harness_helgrind.pl  harness_memcheck.pl
openmp/headers/: FixedVec.hpp  board.hpp  chess_move.hpp  chx_hpx.hpp  data.hpp  defs.hpp  eval.hpp  hash.hpp  here.hpp  main.hpp  mpi_support.hpp  node.hpp  parallel.hpp  parallel_support.hpp  score.hpp  search.hpp  smart_ptr.hpp  task_component.hpp  task_component_impl.hpp  zkey.hpp
openmp/inputs/: board2  board4
openmp/libini/: CMakeLists.txt
openmp/liboptlist/: CMakeLists.txt  optlist.hpp
openmp/src/: CMakeLists.txt  alphabeta.cpp  board.cpp  data.cpp  eval.cpp  hpx_task.cpp  main.cpp  minimax.cpp  mpi_support.cpp  search.cpp  settings.ini  task_component.cpp  wait_any.hpp  xboard.cpp
openmp/testing/: tc_enpassant.rb  time_results  time_test.rb  ts_alltests.rb
serial/: INSTALL
serial/headers/: hash_table.hpp  node.hpp  search.hpp
serial/liboptlist/: optlist.cpp
serial/src/: CMakeLists.txt  data.cpp  hash_table.cpp  search.cpp
src/: CMakeLists.txt  alphabeta.cpp  board.cpp  data.cpp  eval.cpp  hpx_task.cpp  log_board.cpp  main.cpp  minimax.cpp  mpi_support.cpp  print_board.cpp  search.cpp  task_component.cpp  timer.cpp  xboard.cpp
tests/: tc_castling.rb
