PROJECT( chx )
cmake_minimum_required(VERSION 2.6)
SET (CMAKE_BUILD_TYPE Debug)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
find_package(Readline)
find_package(MPI)
find_package(Boost)

IF (MPI_FOUND)
    MESSAGE("MPI was found. Configure MPI Support")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D MPI_SUPPORT -I ${MPI_INCLUDE_PATH}")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L ${MPI_LIBRARY}")
    #SET(EXTRA_LIBS ${EXTRA_LIBS} mpich opa mpl rt)
    SET(CMAKE_CXX_COMPILER "mpicxx")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D MPI_SUPPORT")
ELSE(MPI_FOUND)
    MESSAGE("MPI was not found. Support for MPI is disabled.")
ENDIF(MPI_FOUND)
IF (READLINE_FOUND)
	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D READLINE_SUPPORT")
	set (EXTRA_LIBS ${EXTRA_LIBS} readline)
ELSE (READLINE_FOUND)
	MESSAGE(STATUS "Disabling GNU Readline: Not found")
ENDIF (READLINE_FOUND)

include_directories ("${PROJECT_SOURCE_DIR}/headers")
set (EXTRA_LIBS ${EXTRA_LIBS} ncurses pthread)

add_subdirectory (src)
