PROJECT( chx CXX )
cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)
SET (CMAKE_BUILD_TYPE Debug)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR};${HPX_INSTALL_DIR}/share/cmake-2.8/Modules)
#find_package(Readline)
#find_package(MPI)
find_package(Boost)
find_package(HPX)

IF (HPX_FOUND)
    MESSAGE("HPX was found.")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D HPX_ENABLED")
	include_directories(${HPX_INCLUDE_DIR})
	link_directories(${HPX_LIBRARY_DIR})
ELSE (HPX_FOUND)
    MESSAGE("Could not find HPX. Configuring without HPX support")
ENDIF(HPX_FOUND)
IF (MPI_FOUND)
    MESSAGE("MPI was found. Configure MPI Support")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D MPI_SUPPORT -I ${MPI_INCLUDE_PATH}")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L ${MPI_LIBRARY}")
    #SET(EXTRA_LIBS ${EXTRA_LIBS} mpich opa mpl rt)
    SET(CMAKE_CXX_COMPILER "mpicxx")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D MPI_SUPPORT")
ELSE(MPI_FOUND)
    #MESSAGE("MPI was not found. Support for MPI is disabled.")
    MESSAGE("MPI is not enabled for this version of CHX.")
ENDIF(MPI_FOUND)
IF (READLINE_FOUND)
	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D READLINE_SUPPORT")
	set (EXTRA_LIBS ${EXTRA_LIBS} readline)
ELSE (READLINE_FOUND)
	MESSAGE(STATUS "Disabling GNU Readline: Not found")
ENDIF (READLINE_FOUND)
IF (Boost_FOUND)
    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D HAS_BOOST")
ENDIF (Boost_FOUND)

include_directories ("${PROJECT_SOURCE_DIR}/headers")
set (EXTRA_LIBS ${EXTRA_LIBS} pthread)

add_subdirectory (src)
